--- a/views/admin/companhia/add.ejs
+++ b/views/admin/companhia/add.ejs
@@ -13,17 +13,17 @@
     </head>
 
     <body>
-        <div class=" form-container">
+        <div class=" form-box">
             <h1>Adicionar companhia</h1>
-            <form action="#" method="post">
+            <form enctype="multipart/form-data"  method="post">
                 <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome" placeholder="Digite o nome do aeroporto"><br>
+                <input type="text" name="nome" id="nome"  placeholder="Digite o nome do aeroporto"><br>
  
                 <label for="pais">País</label>
                 <input type="text" name="pais" id="pais" placeholder="Digite a país do aeroporto"><br>
 
                 <label for="foto">Foto</label>
-                <input type="text" name="foto" id="foto" placeholder="Digite a foto do aeroporto"><br>
+                <input type="file" name="foto" id="foto" placeholder="Digite a foto do aeroporto"><br>
                 <!-- <label for="foto">Foto</label> -->
                 <!-- <input type="number" id="novo-peso" ><br> -->
 
