--- a/views/admin/cotacao/edt.ejs
+++ b/views/admin/cotacao/edt.ejs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="form-box">
         <h1>Editar Informações da cotação</h1>
         
         <label for="origem">Origem</label>
