--- a/views/admin/aeroporto/edt.ejs
+++ b/views/admin/aeroporto/edt.ejs
@@ -16,17 +16,19 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="form-box">
         <h1>Editar Informações do aeroporto</h1>
-        <form action="" method="post">
+        <form enctype="multiparti/form-data" method="post">
+
             <label for="nome">Nome</label>
-            <input type="text" name="nome" id="nome" placeholder="Digite o nome do aeroporto"><br>
+            <input type="text" name="nome" id="nome"  value="<%=aeroporto.nome%>" placeholder="Digite o nome do aeroporto"><br>
 
             <label for="localizacao">Localização</label>
-            <input type="text"  name="localizacao" id="localizacao" placeholder="Digite a localização do aeroporto"><br>
+            <input type="text"  name="localizacao" id="localizacao"  value="<%=aeroporto.localizacao%>" placeholder="Digite a localização do aeroporto"><br>
 
+            <img src = "/arquivos/<%=aeroporto.foto%>" class="aerimg "/>
             <label for="foto">Foto</label>
-            <input type="text" name="foto" id="foto"><br>
+            <input type="file" name="foto" id="foto"   value="<%=aeroporto.foto%>"><br>
             <!-- <label for="foto">Foto</label> -->
             <!-- <input type="number" id="novo-peso" ><br> -->
 
@@ -34,6 +36,7 @@
         </form>
 
         <div class="form-footer">
+
             <p>Voltar para a <a href="/admin/aeroporto/lst">Página Inicial</a></p>
         </div>
     </div>
