--- a/views/admin/companhia/edt.ejs
+++ b/views/admin/companhia/edt.ejs
@@ -16,17 +16,17 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Editar Informações do aeroporto</h1>
-        <form action="" method="post">
+    <div class="form-box">
+        <h1>Editar Informações da Companhia Aérea</h1>
+        <form enctype="multipart/form-data" method="post">
             <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome" placeholder="Digite o nome do aeroporto"><br>
+                <input type="text" name="nome" id="nome"  value="<%=companhia.nome%>" placeholder="Digite o nome do aeroporto"><br>
  
                 <label for="pais">País</label>
-                <input type="text" name="pais" id="pais" placeholder="Digite a país do aeroporto"><br>
+                <input type="text" name="pais" id="pais"   value="<%=companhia.pais%>" placeholder="Digite o país do aeroporto"><br>
 
                 <label for="foto">Foto</label>
-                <input type="text" name="foto" id="foto" placeholder="Digite a foto do aeroporto"><br>
+                <input type="file" name="foto" id="foto"    value="<%=companhia.foto%>" placeholder="Digite a foto do aeroporto"><br>
             <!-- <label for="foto">Foto</label> -->
             <!-- <input type="number" id="novo-peso" ><br> -->
 
