--- a/views/admin/cotacao/add.ejs
+++ b/views/admin/cotacao/add.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="form-box">
         <form action="" method="post">
             
             <label for="origem">Origem</label>
