--- a/views/admin/usuario/add.ejs
+++ b/views/admin/usuario/add.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>     
-    <div class="container">
+    <div class="form-box">
         <h1>Adicionar usuario</h1>
         <form action="#" method="post">
             <label for="nome">Nome</label>
