--- a/views/admin/companhia/add.ejs
+++ b/views/admin/companhia/add.ejs
@@ -10,6 +10,8 @@
         <title>Adicionar Companhia Aérea</title>
         <link rel="stylesheet" href="/css/style.css">
 
+        <label for="foto">Foto</label>
+        <input type="file" name="foto" id="foto"><br>
     </head>
 
     <body>
@@ -25,6 +27,8 @@
                 <label for="foto">Foto</label>
                 <input type="file" name="foto" id="foto" placeholder="Digite a foto do aeroporto"><br>
                 <!-- <label for="foto">Foto</label> -->
+
+                
                 <!-- <input type="number" id="novo-peso" ><br> -->
 
                 <button type="submit">Adicionar </button>
