--- a/views/admin/aeroporto/lst.ejs
+++ b/views/admin/aeroporto/lst.ejs
@@ -8,7 +8,6 @@
         <button type="submit">pesquisar</button>
         
     </form>
-<div class="form-box"  >
 
             <tr>
                 <th>Nome</th>
@@ -25,7 +24,8 @@
                 <td><%= aeroporto.nome %></td>
                 <td><%= aeroporto.localizacao %></td>
                 <td>
-                    <img src="/arquivos/<%=aeroporto.foto%>" class="Imenor"/>
+                    <img src="/arquivos/<%=aeroporto.foto%>" class="Imenor" width="100%" height="100%"/>
+                    <option value="foto" selected></option>
                 </td>
 
                 <td>
