--- a/views/admin/cabecalho.ejs
+++ b/views/admin/cabecalho.ejs
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="/">Travelfontes</a>
+                <a>Travelfontes</a>
             </div>
             <ul class="menu">
                 <li><a href="/">Início</a></li>
