--- a/views/admin/cotacao/lst.ejs
+++ b/views/admin/cotacao/lst.ejs
@@ -28,8 +28,9 @@
                         <i class="fas fa-edit"></i>&nbsp;Editar
                     </a>
                     
-                        <a href="/admin/cotacao/del/<%=cotacao.id%>">Excluir</a>
-                </td>
+                    <a href="/admin/cotacao/del/<%=cotacao.id%>" class="btn delete">
+                        <i class="fas fa-trash"></i>&nbsp;Excluir
+                    </a>
             </tr>
             <%})%>
         </tbody>
