--- a/views/admin/usuario/lst.ejs
+++ b/views/admin/usuario/lst.ejs
@@ -1,7 +1,7 @@
 <%- include('../cabecalho.ejs') %>
 
 <h1>Usuários</h1>
-<div class="add-companhia">
+<div class="form-container">
     <table>
         <!-- Cabeçalho da Tabela -->
         <thead>
