--- a/views/admin/companhia/edt.ejs
+++ b/views/admin/companhia/edt.ejs
@@ -1,42 +1,45 @@
-
 <%-include('../cabecalho.ejs') %>
 
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
 
-<html lang="pt-br">
+    <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Informações da Companhia Aérea</title>
-   
-    <link rel="stylesheet" href="/css/style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Editar Informações da Companhia Aérea</title>
 
-</head>
+        <link rel="stylesheet" href="/css/style.css">
 
-<body>
-    <div class="form-box">
-        <h1>Editar Informações da Companhia Aérea</h1>
-        <form enctype="multipart/form-data" method="post">
-            <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome"  value="<%=companhia.nome%>" placeholder="Digite o nome do aeroporto"><br>
- 
+    </head>
+
+    <body>
+        <div class="form-box">
+            <h1>Editar Informações da Companhia Aérea</h1>
+            <form enctype="multipart/form-data" method="post">
+                <label for="nome">Nome</label>
+                <input type="text" name="nome" id="nome" value="<%=companhia.nome%>"
+                    placeholder="Digite o nome do aeroporto"><br>
+
                 <label for="pais">País</label>
-                <input type="text" name="pais" id="pais"   value="<%=companhia.pais%>" placeholder="Digite o país do aeroporto"><br>
+                <input type="text" name="pais" id="pais" value="<%=companhia.pais%>"
+                    placeholder="Digite o país do aeroporto"><br>
 
                 <label for="foto">Foto</label>
-                <input type="file" name="foto" id="foto"    value="<%=companhia.foto%>" placeholder="Digite a foto do aeroporto"><br>
-            <!-- <label for="foto">Foto</label> -->
-            <!-- <input type="number" id="novo-peso" ><br> -->
+                <input type="file" name="foto" id="foto" value="<%=companhia.foto%>"><br>
 
-            <button type="submit">Editar</button>
-        </form>
+                <img src="/arquivos/<%=companhia.foto%>">
+            <!-- <label for=" foto">Foto</label> -->
+                <!-- <input type="number" id="novo-peso" ><br> -->
 
-        <div class="form-footer">
-            <p>Voltar para a <a href="/admin/companhia/lst">Página Inicial</a></p>
+                <button type="submit">Editar</button>
+            </form>
+
+            <div class="form-footer">
+                <p>Voltar para a <a href="/admin/companhia/lst">Página Inicial</a></p>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 
-</html>
+    </html>
