--- a/views/admin/cotacao/edt.ejs
+++ b/views/admin/cotacao/edt.ejs
@@ -18,24 +18,37 @@
 <body>
     <div class="form-box">
         <h1>Editar Informações da cotação</h1>
-        
+        <label for="usuario">Nome</label>
+        <select class="form-select"  id="usuario" name="usuario">
+            <option value="" selected hidden>Selecione seu nome de usuario</option>
+              <%usuarios.forEach(function(usuario){%>
+                <option value='<%=usuario.id%>'></option><%=usuario.nome%></option>
+             <%})%>
+        </select>
+
         <label for="origem">Origem</label>
-        <select class="form-select"  id="origem" name="origem required">
-            <option value=""disabled selected hidden>Selecione seu local de Origem</option>
-          <option value="">a</option>
-          <option value="">b</option>
-          <option value="">c</option>
+        <select class="form-select" id="origem" name="origem">
+            <option value="" disabled selected hidden>Selecione seu local de Origem</option>
+            <%aeroportos.forEach(function(aeroporto){%>
+
+                <option value='<%=aeroporto.id%>'>
+                    <%=aeroporto.nome%>
+                </option>
+                <%})%>
         </select>
 
 
         <label for="destino">Destino</label>
-        <select class="form-select"  id="destino" name="destino required">
-            <option value=""disabled selected hidden>Selecione seu local de destino</option>
-          <option value="">a</option>
-          <option value="">b</option>
-          <option value="">c</option>
+        <select class="form-select" id="destino" name="destino">
+            <option value="" disabled selected hidden>Selecione seu local de destino</option>
+
+            <%aeroportos.forEach(function(aeroporto){%>
+
+                <option value='<%=aeroporto.id%>'>
+                    <%=aeroporto.nome%>
+                </option>
+                <%})%>
         </select>
-       
 
         <label for="ida">Data de ida</label>
         <input type="date" id="ida">
@@ -43,6 +56,11 @@
         <label for="volta">Data de volta</label>
         <input type="date" id="volta">
 
+        <label for="status">Status</label>
+        <select id="status" name="status">
+          <option value="em_processo">Em processo</option>
+          <option value="aprovado">Aprovado</option>
+        </select>
       
             <!-- <label for="foto">Foto</label> -->
             <!-- <input type="number" id="novo-peso" ><br> -->
