--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,25 +1,31 @@
-<%-include('cabecalho.ejs') %>
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travels</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
 
-    <!DOCTYPE html>
-    <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-        <title>Travelfontes</title>
-    </head>
-
-    <body>
-       
-        <main>
-            <h1>Seja bem vindo ao Travelfontes!</h1>
-            <p>Aonde as suas viagens se tornam acessíveis.
-            </p>
-        </main>
-
-       
-        <a href="admin/cotacao/lst">Lista de Cotações</a>
+<body>
+        <div class="background">
+            <div class="header">
+                <span class="club-name">Travels</span>
+            </div>
+    
+            <h1>Aqui sua viagem fica muito mais acessível!</h1>
+    
+            <div class="links">
+                <a href="admin/cotacao/lst" class="link-btn">Cotação</a>
+                <a href="admin/aeroporto/lst" class="link-btn">Aeroporto</a>
+                <a href="admin/usuario/lst" class="link-btn">Usuário</a>
+                <a href="admin/companhia/lst" class="link-btn">Companhia</a>
+            </div>
+        </div>
     </body>
+    
 
-    </html>
+
+</html>
