--- a/views/admin/usuario/add.ejs
+++ b/views/admin/usuario/add.ejs
@@ -3,7 +3,7 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-
+    <div class="form-container">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 </head>
 
 <body>     
-    <div class="form-box">
+    <div class="form-container">
         <h1>Adicionar usuario</h1>
         <form action="#" method="post">
             <label for="nome">Nome</label>
